# Hand-Gestures-module

./: .gitignore  pyproject.toml  setup.cfg
src/DILPREET1910_Mediapipe/: HandTrackingModule.py
src/DILPREET1910_Mediapipe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Hand_Gestures/: HandTrackingModule.py
src/Hand_Gestures.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hand_gestures.egg-info/: PKG-INFO  SOURCES.txt
