[metadata]
name = Hand_Gestures
version = 0.1.4
author = DILPREET1910
author_email = dsahney1910@gmail.com
description = a minimalist custom module for mediapipe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DILPREET1910/Hand-Gestures-module
project_urls =
    Bug Tracker = https://github.com/DILPREET1910/Hand-Gestures-module/issues
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src